# taarimalta.github.io

./: .gitignore  CNAME  README.md  archives.html  authors.html  categories.html  happy-dashain-in-turtle.html  index.html  janch.html  pyproject.toml  tags.html
author/: taari-malta.html
category/: janchtech.html  tools.html  turtle.html
feeds/: all.atom.xml  janchtech.atom.xml  tools.atom.xml  turtle.atom.xml
pelican/: pelicanconf.py  publishconf.py  tasks.py
pelican/content/JanchTech/: about-janch.md
pelican/content/Turtle/: about-janch.md  happy-dashain.md
pelican/content/images/: spiral.png~
