[tool.poetry]
name = "taarimalta.github.io"
version = "0.1.0"
description = "Personal Blog"
authors = ["Sawan Vaidya <sawanvaidya@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.5.0"}
ghp-import = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
